# Mesh-chain

./: CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
TEE-benchmarks/results/: benchmark_output.txt
TEE-benchmarks/ta/: Makefile  sub.mk
config/: rural_simulation_config.yaml  rural_simulation_config.yaml.BEFORE_LARGE_GRID  simulation_config.yaml
configs/: mbedtls_config_kernel.h.patch
figures/: anchoring_table.tex  defense_results_table.tex  scalability_table.tex
host/: Makefile  main.c
omnetpp/: MeshChainNetwork.ned  omnetpp.ini
openscience-ecdsa-benchmark/: README.md
openscience-ecdsa-benchmark/scripts/: run-benchmark.exp
scripts/: analyze_anchoring.py  analyze_scalability.py  build.sh  comprehensive_analysis.sh  customize_scenario.sh  generate_paper_figures.py  install-dependencies.sh  launcher_template.sh.in  run_attack.sh.in  run_integrated.sh.in  run_integrated_simulation.sh  run_rural.sh.in  run_simulation.sh  start_dashboard.sh  stop_dashboard.sh  sumo_traci_bridge.py  verify_network_delays.cpp  visualize_anchoring.py  visualize_defense_results.py  visualize_scalability.py
src/: attack_scenario_test.cpp  benchmark_pqc.cpp  debug_gf256_init.cpp  l2_anchor_watcher.cpp  main.cpp  main_integrated.cpp  main_integrated_attack.cpp  main_rural.cpp  main_rural.cpp.BACKUP_9RSU  main_rural.cpp.BACKUP_BEFORE_RSU_UPDATE  main_rural.cpp.working_backup  test_defense_paper.cpp  test_defense_resilience.cpp  test_falcon_integration.cpp  test_falcon_verification.cpp  test_gf256.cpp  test_implementation_verification.cpp  test_mac_integration.cpp  test_merkle_proof.cpp  test_offchain_storage.cpp  test_oprf_search.cpp  test_realistic_mac.cpp  test_shamir_key.cpp  test_shamir_simple.cpp  test_tls13.cpp  test_token_bucket_qos.cpp  test_witness_tracking.cpp  test_zkp.cpp  verify_crypto.cpp
src/common/: block.h  block.h.BACKUP_BEFORE_ATTESTDIV  block.h.BACKUP_BEFORE_DIVERSITY_CERT_REMOVAL  block.h.BACKUP_BEFORE_ECDSA  block.h.BACKUP_BEFORE_TEE_REFACTOR  config_loader.h  density_analyzer.h  merkle_tree.h  scalability_metrics.h  spatial_index.h  types.h  v2x_messages.h
src/crypto/: extensibility.h  liboqs_wrapper.h  pqc_signatures.h  secure_channel.h  sha3_wrapper.h  tee_aggregator.h  tee_aggregator.h.BACKUP_BEFORE_ATTESTDIV  tee_aggregator.h.BACKUP_BEFORE_ATTESTQUORUM  tee_aggregator.h.BACKUP_BEFORE_ECDSA  tls13_channel.h  tls13_real.h  tof_measurement.h  zkp_stark.h  zkp_stark_real.h
src/infrastructure/: rsu.h
src/integration/: global_mac_channel.h  global_mac_channel.h.working_backup  integrated_vehicle.h  integrated_vehicle.h.BACKUP_BEFORE_ATTESTQUORUM  libp2p_node.h  libp2p_node_real.h  network_delay_model.h  omnet_message_broker.h  omnetpp_coordinator.h  realistic_mac_layer.h  sumo_visualizer.h  tof_adapter.h  traci_client.h  traci_client_socket.h  wave_stack.h  wave_stack_ns3.h  wave_stack_omnetpp.h
src/network/: omnetpp_interface.h  token_bucket_qos.h
src/rsu/: anchor_system.h
src/security/: attacker_models.cpp  attacker_models.h  defense_resilience.h
src/storage/: oprf_search.h  shamir_secret_sharing.h
src/vehicle/: block_creator.h  block_creator.h.BACKUP_BEFORE_ATTESTQUORUM  block_creator.h.BACKUP_BEFORE_ECDSA  block_creator.h.BACKUP_BEFORE_PHASE_D_ATTESTDIV  diversity_metrics.h  witness_selection.h
sumo/: gui-settings.xml  highway.edg.xml  highway.net.xml  highway.nod.xml  highway.rou.xml  highway.sumo.cfg  highway_5km.edg.xml  highway_5km.net.xml  highway_5km.nod.xml  highway_5km.rou.xml  highway_5km.sumo.cfg  highway_5km_simple.edg.xml  highway_5km_simple.net.xml  highway_5km_simple.nod.xml  highway_5km_simple.rou.xml  highway_5km_simple.sumo.cfg  highway_complex.edg.xml  highway_complex.net.xml  highway_complex.nod.xml  highway_complex.rou.xml  highway_complex.sumo.cfg  large_grid.net.xml  large_grid.rou.alt.xml  large_grid.rou.xml  large_grid.sumo.cfg  large_grid.trips.xml  large_grid_flows.rou.xml  network.net.xml  routes.rou.xml  rsu_locations.add.xml  rural_complex.edg.xml  rural_complex.net.xml  rural_complex.nod.xml  rural_complex.rou.xml  rural_complex.sumo.cfg  rural_complex.typ.xml  rural_complex_gui.xml  rural_complex_rsu.add.xml  rural_gui_settings.xml  rural_road.edg.xml  (+19 more)
ta/: ecdsa_sign_ta.c
ta/include/: ecdsa_sign_ta.h
tests/: test_merkle_proof_validation.cpp  test_oprf_simple.cpp  test_real_delay_timing.cpp  test_tof.cpp
visualization/: dashboard.html  realtime_dashboard.html
visualization/data/: simulation_data.json
